[Content Extensions] Fix if-domain and unless-domain when loading main documents. https://bugs.webkit.org/show_bug.cgi?id=146868

Patch by Alex Christensen <achristensen@webkit.org> on 2015-07-14
Reviewed by Benjamin Poulain.

Source/WebCore:

Tests: http/tests/contentextensions/block-everything-if-domain.html
       http/tests/contentextensions/block-everything-unless-domain-iframe.html
       http/tests/contentextensions/block-everything-unless-domain-redirect.php
       http/tests/contentextensions/block-everything-unless-domain.html

* contentextensions/ContentExtensionsBackend.cpp:
(WebCore::ContentExtensions::ContentExtensionsBackend::processContentExtensionRulesForLoad):
If we are loading a new main document, use that main document url as the main document url for domain comparison.

LayoutTests:

* http/tests/contentextensions/block-everything-if-domain-expected.txt: Added.
* http/tests/contentextensions/block-everything-if-domain.html: Added.
* http/tests/contentextensions/block-everything-if-domain.html.json: Added.
* http/tests/contentextensions/block-everything-unless-domain-expected.txt: Added.
* http/tests/contentextensions/block-everything-unless-domain-iframe-expected.txt: Added.
* http/tests/contentextensions/block-everything-unless-domain-iframe.html: Added.
* http/tests/contentextensions/block-everything-unless-domain-iframe.html.json: Added.
* http/tests/contentextensions/block-everything-unless-domain-redirect-expected.txt: Added.
* http/tests/contentextensions/block-everything-unless-domain-redirect.php: Added.
* http/tests/contentextensions/block-everything-unless-domain-redirect.php.json: Added.
* http/tests/contentextensions/block-everything-unless-domain.html: Added.
* http/tests/contentextensions/block-everything-unless-domain.html.json: Added.
* http/tests/contentextensions/main-resource-redirect-blocked-expected.txt:
* http/tests/contentextensions/resources/block-everything-unless-domain-helper.html: Added.
* http/tests/contentextensions/resources/should-load.html: Added.
* http/tests/contentextensions/resources/should-not-load.html: Added.

Canonical link: https://commits.webkit.org/164996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186807 268f45cc-cd09-0410-ab3c-d52691b4dbfc